--- a/34512-h/34512-h.htm
+++ b/34512-h/34512-h.htm
@@ -975,7 +975,7 @@ She was gowned in white, with a scarlet ribbon at her throat, and the
 green wall vividly accented and heightened her outline.  I stood,
 staring like a fool for what seemed a century of heart-beats as she
 flashed forth there, out of what seemed a sheer depth of masonry; then
-she turned her bead slightly, as though in disdain of me, and looked
+she turned her head slightly, as though in disdain of me, and looked
 off toward the lake.  I had uncovered at sight of her, and found, when
 I gained the broad hall at Glenarm House, that I still carried my hat.
 </P>
